first update to minimalism12

--- a/src/Views/auth.twig
+++ b/src/Views/auth.twig
@@ -22,8 +22,7 @@
                     error: function (XMLHttpRequest, textStatus, errorThrown) {
                     },
                     success: function (result) {
-                        var response = JSON.parse(result);
-                        console.log(response);
+                        console.log(result);
                         //window.location.replace(form.data('redirection'));
                     }
                 });
