--- a/src/Views/Index.twig
+++ b/src/Views/Index.twig
@@ -11,5 +11,5 @@
 <form method="get" action="{{ links.home }}login">
     <label for="email">email</label>
     <input type="email" name="email" id="email">
-    <button type="submit"/>
+    <button type="submit">Login with Email</button>
 </form>
