--- a/src/Views/Password.twig
+++ b/src/Views/Password.twig
@@ -2,12 +2,12 @@
     <input type="hidden" name="userId" value="{{ data.id }}"/>
     <label for="password">password</label>
     <input type="password" name="password" id="password">
-    <button type="submit"/>
+    <button type="submit">Login</button>
 </form>
 <form method="post" action="{{ links.home }}login" id="sendCodeForm">
     <input type="hidden" name="userId" value="{{ data.id }}"/>
     <input type="hidden" name="resendCode" value="true"/>
-    <button type="submit" value="login with code instead"/>
+    <button type="submit">login with code instead</button>
 </form>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
@@ -24,10 +24,10 @@
                 data: postData,
                 error: function (XMLHttpRequest, textStatus, errorThrown) {
                     error = JSON.parse(XMLHttpRequest.responseText);
-                    alert(error.errors[0].detail);
+                    alert(error.errors[0].title);
                 },
                 success: function (result) {
-                    window.location.replace(result.links.redirection);
+                    window.location.replace(result.links.redirect);
                 }
             });
         });
@@ -44,10 +44,10 @@
                 data: postData,
                 error: function (XMLHttpRequest, textStatus, errorThrown) {
                     error = JSON.parse(XMLHttpRequest.responseText);
-                    alert(error.errors[0].detail);
+                    alert(error.errors[0].title);
                 },
                 success: function (result) {
-                    window.location.replace(result.links.redirection);
+                    window.location.replace(result.links.redirect);
                 }
             });
         });
