--- a/src/Views/Code.twig
+++ b/src/Views/Code.twig
@@ -1,13 +1,13 @@
 <form method="post" action="{{ links.home }}login" id="loginForm">
     <input type="hidden" name="userId" value="{{ data.id }}"/>
     <label for="code">code</label>
-    <input type="text" name="code" id="code">
-    <button type="submit"/>
+    <input type="text" name="code" id="code" value="{{ meta.code }}">
+    <button type="submit">login</button>
 </form>
 <form method="post" action="{{ links.home }}login" id="sendCodeForm">
     <input type="hidden" name="userId" value="{{ data.id }}"/>
     <input type="hidden" name="resendCode" value="true"/>
-    <button type="submit" value="login with code instead"/>
+    <button type="submit">Resend me the code</button>
 </form>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
@@ -24,10 +24,10 @@
                 data: postData,
                 error: function (XMLHttpRequest, textStatus, errorThrown) {
                     error = JSON.parse(XMLHttpRequest.responseText);
-                    alert(error.errors[0].detail);
+                    alert(error.errors[0].title);
                 },
                 success: function (result) {
-                    window.location.replace(result.links.redirection);
+                    window.location.replace(result.links.redirect);
                 }
             });
         });
@@ -44,10 +44,10 @@
                 data: postData,
                 error: function (XMLHttpRequest, textStatus, errorThrown) {
                     error = JSON.parse(XMLHttpRequest.responseText);
-                    alert(error.errors[0].detail);
+                    alert(error.errors[0].title);
                 },
                 success: function (result) {
-                    window.location.replace(result.links.redirection);
+                    window.location.replace(result.links.redirect);
                 }
             });
         });
