--- a/src/Views/Emails/Forgot.twig
+++ b/src/Views/Emails/Forgot.twig
@@ -6,7 +6,7 @@
         <br/><br/>
         Click on the link below to reset it:
         <br/>
-        <a href="{{ url }}" mc:disable-tracking class="es-button" target="_blank">{{ resetUrl }}</a>
+        <a href="{{ url }}" mc:disable-tracking class="es-button" target="_blank">{{ url }}</a>
         <br/><br/>
         If you did not request a password reset, just ignore this email.
         <br/><br/>
