--- a/src/Views/Index.twig
+++ b/src/Views/Index.twig
@@ -13,3 +13,4 @@
     <input type="email" name="email" id="email">
     <button type="submit">Login with Email</button>
 </form>
+<a href="{{ links.home }}/forgot">forgot your password?</a>
