--- a/src/Views/Password.twig
+++ b/src/Views/Password.twig
@@ -4,6 +4,7 @@
     <input type="password" name="password" id="password">
     <button type="submit">Login</button>
 </form>
+<a href="{{ links.home }}/forgot">forgot your password?</a><br/>
 <form method="post" action="{{ links.home }}login" id="sendCodeForm">
     <input type="hidden" name="userId" value="{{ data.id }}"/>
     <input type="hidden" name="resendCode" value="true"/>
